--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ h1 {
     box-shadow: 0 0 1px 2px var(--black);
 }
 
+.color-box:hover {
+    transform: translate3d(2px, 2px, 0px);
+    border: 5px solid;
+    border-color: rgb(250, 250, 250);
+}
 .color-box {
     cursor: pointer;
     width: 100px;
